--- a/main.css
+++ b/main.css
@@ -21,14 +21,57 @@ margin-left: 2%;
 
 .title-card{
   background: #673AB7;
+  height: 35px;
+}
+
+.title-card-calculator{
+  background: #9575CD;
+  height: 35px;
+}
+
+.title-card-calculator span{
+  color: #FFFFFF;
+  font-size: 0.9em;
+  margin-top: 5%;
+  margin-left: 3%;
+}
+
+.title-card-calculator div a{
+  color: #FFFFFF;
+  font-size: 1em;
+  margin-top: 5%;
+  margin-left: 1%;
+  text-decoration: none;
 
 }
 
+.title-card-calculator-text{
+  position: relative;
+  top: 50%;
+  left: 0;
+  vertical-align: bottom;
+}
+
+
 .title-card span{
   color: #FFFFFF;
-  font-size: 2em;
+  font-size: 1.5em;
+  margin-left: 1%;
+  vertical-align: bottom;
+  position: relative;
+  top: 28%;
+  left: 0;
+}
+
+.title-card span a{
+  color: #FFFFFF;
+  font-size: 1em;
   margin-top: 5%;
-  margin-left: 3%;
+  margin-left: 1%;
+  text-decoration: none;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .block {
@@ -44,6 +87,7 @@ margin-left: 2%;
   width: 50%;
   float: left;
   margin-left: 4%;
+  margin-top: 1%;
 }
 
 .mainresults {
