--- a/main.css
+++ b/main.css
@@ -12,135 +12,22 @@ margin-top: 2%;
 margin-left: 2%;
 }
 
-.card{
-  border-radius: 3px;
-  background: #FFFFFF;
-  margin-top: 1%;
-  margin-bottom: 3%;
-}
-
-.title-card{
-  background: #673AB7;
-  height: 35px;
-}
-
-.title-card-calculator{
-  background: #9575CD;
-  height: 35px;
-}
-
-.title-card-calculator span{
-  color: #FFFFFF;
-  font-size: 0.9em;
-  margin-top: 5%;
-  margin-left: 3%;
-}
-
-.title-card-calculator div a{
-  color: #FFFFFF;
-  font-size: 1em;
-  margin-top: 5%;
-  margin-left: 1%;
-  text-decoration: none;
-
-}
-
-.title-card-calculator-text{
-  position: relative;
-  top: 50%;
-  left: 0;
-  vertical-align: bottom;
-}
-
-
-.title-card span{
-  color: #FFFFFF;
-  font-size: 1.5em;
-  margin-left: 1%;
-  vertical-align: bottom;
-  position: relative;
-  top: 28%;
-  left: 0;
-}
-
-.title-card span a{
-  color: #FFFFFF;
-  font-size: 1em;
-  margin-top: 5%;
-  margin-left: 1%;
-  text-decoration: none;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-.block {
+.card-index {
   display: block-inline;
   float: left;
   margin-bottom: 1%;
   margin-left: 1%;
 }
 
-.mainCalculator {
-  border-radius: 3px;
-  background: #FFFFFF;
-  width: 50%;
-  float: left;
-  margin-left: 4%;
-  margin-top: 1%;
-}
-
-.mainresults {
-  padding: 1%;
-  margin-left:2%;
-}
-
-.results {
-  border-radius: 3px;
-  width: 50%;
-  padding: 2%;
-  margin-top: 3%;
-  display: inline-block;
-  background-color: #CCCCCC;
-}
-
-.resultCalculator {
-  margin-top: 5%;
-  padding: 1%;
-}
-.textcalc {
-  font-size: 2em;
-}
-
-.inputCalculator {
-
-margin-bottom: 4%;
-}
-.inputcalc {
-  border-radius: 3px;
-  margin-top: 3%;
-  margin-left: 3%;
-  padding: 1%;
-  font-size:2em;
-  width: 80%;
-  border: 1px solid #c8c8c8;
-  box-shadow=inset 2px 2px 2px #f2f2f2;
-  outline: 0;
-}
-
-.labelPrice {
-  font-size: 2em;
-}
-.price {
-  font-size: 2em;
-  font-style: arial;
-}
-.priceRef {
-  display: block;
-}
 .footer {
   clear: both;
   padding: 0 15px;
+}
+
+
+/* to verify - orphan class*/
+.priceRef {
+  display: block;
 }
 
 .exchanges{
