--- a/css/main_calculator.css
+++ b/css/main_calculator.css
@@ -6,41 +6,33 @@
   margin-left: 1%;
   margin-top: 1%;
 }
-
-.title-card-calculator{
+.title-card-calculator {
   background: #9575CD;
   height: 35px;
 }
-
-.title-card-calculator span{
+.title-card-calculator span {
   color: #FFFFFF;
   font-size: 0.9em;
   margin-top: 5%;
   margin-left: 2%;
 }
-
-.title-card-calculator div a{
+.title-card-calculator div a {
   color: #FFFFFF;
   font-size: 1em;
   margin-top: 5%;
   margin-left: 1%;
   text-decoration: none;
-
 }
-
-.title-card-calculator-text{
+.title-card-calculator-text {
   position: relative;
   top: 50%;
   left: 0;
   vertical-align: bottom;
 }
-
-
 .mainresults {
   padding: 1%;
-  margin-left:1%;
+  margin-left: 1%;
 }
-
 .results {
   border-radius: 3px;
   width: 50%;
@@ -50,39 +42,72 @@
   background-color: #CCCCCC;
 }
 
+.results-income{
+  width: 95%;
+}
+
+.left-results {
+  float: left;
+  width: 50%;
+  margin-bottom: 3%;
+}
+.right-results {
+  float: right;
+  width: 50%;
+  margin-bottom: 3%;
+}
 .labelPrice {
   font-size: 2em;
 }
+
+.labelPrice-income {
+  font-size: 1.3em;
+}
+
 .price {
   font-size: 2em;
   font-style: arial;
 }
 
+.price-income {
+  font-size: 1.3em;
+  font-style: arial;
+}
+
 
 /** class orphan */
+
 .resultCalculator {
   margin-top: 5%;
   padding: 1%;
 }
 
 /** class orphan */
+
 .textcalc {
   font-size: 2em;
 }
-
-
 .inputCalculator {
-margin-bottom: 4%;
+  margin-bottom: 4%;
 }
-
 .inputcalc {
   border-radius: 3px;
   margin-top: 3%;
   margin-left: 3%;
   padding: 1%;
-  font-size:2em;
+  font-size: 2em;
   width: 80%;
   border: 1px solid #c8c8c8;
   box-shadow=inset 2px 2px 2px #f2f2f2;
   outline: 0;
+}
+.inputcalc-income {
+  width: 20%;
+}
+.left-calc {
+
+}
+.right-calc {
+  float: right;
+  display: block;
 }
