Update header and wrapper class

--- a/css/main.css
+++ b/css/main.css
@@ -3,13 +3,21 @@ html {
   background-color:#E5E5E1;
 }
 .header {
-
+  width: 100%;
+  overflow: hidden;
+  background-color: white;
 }
 
+.wrapper{
+  margin: 25px auto;
+  width: 1100px;
+}
+
+
 .title-logo{
-font-size: 2em;
-margin-top: 2%;
-margin-left: 2%;
+  font-size: 2em;
+  margin-top: 2%;
+  margin-left: 2%;
 }
 
 .card-index {
